--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,13 +6,13 @@ spring:
     type: com.zaxxer.hikari.HikariDataSource
     url: jdbc:mysql://127.0.0.1:3306/video?serverTimezone=UTC
     username: root
-    password: handon
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       #driver-class-name: com.mysql.jdbc.Driver
 #      jdbc-url: jdbc:mysql://127.0.0.1:3306/video
 #      username: root
-#      password: handon
+#      password: root
 #      data-source-class-name: com.mysql.cj.jdbc.Driver
 
 
